--- a/fontend/style.css
+++ b/fontend/style.css
@@ -75,3 +75,13 @@ button:hover {
         width: 90%;
     }
 }
+.error{
+    color: red;
+}
+.error h3{
+    text-align: center;
+}
+.hidden{ 
+
+    display: none;
+}
