--- a/fontend/postStyle.css
+++ b/fontend/postStyle.css
@@ -1,3 +1,18 @@
+.header{
+  width: 90%;
+  margin: 0 auto;
+  display:flex;
+  justify-content:  space-between;
+  align-items: center;
+}
+
+.logoutBtn{
+  background-color: red;
+  border: none;
+  padding: 10px;
+  border-radius: 8px ;
+  
+}
 #post-container{
   width: 80%;
   background-color:  rgb(209, 209, 235);
